syntax = "proto3";

package distributed.demo.inventory;

option csharp_namespace = "DistributedDemo.Inventory.Protos";

message ReserveSkuRequest {
  string sku = 1;
  int32 quantity = 2;
  string correlation_id = 3;
}

message ReserveSkuResponse {
  string confirmation_id = 1;
  bool success = 2;
  string message = 3;
}
